# public-dataset-crawler

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
crawler/: archive.py  config.py  dataclass.py  helper.py  io.py  main.py
crawler/web/: __init__.py  func.py  playwright.py
tests/: test_config.py
tests/runs/single/: HCDA - REAL DATA GATHERING.xlsx  test_single.py
